Colorized barebox prompt

--- a/board/beaglebone/barebox.config
+++ b/board/beaglebone/barebox.config
@@ -152,7 +152,7 @@ CONFIG_SHELL_HUSH=y
 CONFIG_GLOB=y
 CONFIG_GLOB_SORT=y
 CONFIG_PROMPT_HUSH_PS2="> "
-# CONFIG_HUSH_FANCY_PROMPT is not set
+CONFIG_HUSH_FANCY_PROMPT=y
 CONFIG_CMDLINE_EDITING=y
 CONFIG_AUTO_COMPLETE=y
 CONFIG_MENU=y
@@ -293,7 +293,7 @@ CONFIG_CMD_UMOUNT=y
 # Environment
 #
 CONFIG_CMD_NV=y
-# CONFIG_CMD_EXPORT is not set
+CONFIG_CMD_EXPORT=y
 # CONFIG_CMD_DEFAULTENV is not set
 CONFIG_CMD_GLOBAL=y
 # CONFIG_CMD_LOADENV is not set
@@ -335,10 +335,10 @@ CONFIG_CMD_UNCOMPRESS=y
 # Shell scripting
 #
 CONFIG_CMD_FALSE=y
-# CONFIG_CMD_GETOPT is not set
+CONFIG_CMD_GETOPT=y
 CONFIG_CMD_LET=y
 CONFIG_CMD_MSLEEP=y
-# CONFIG_CMD_READF is not set
+CONFIG_CMD_READF=y
 CONFIG_CMD_SLEEP=y
 CONFIG_CMD_TEST=y
 CONFIG_CMD_TRUE=y
@@ -359,6 +359,8 @@ CONFIG_CMD_PASSWD=y
 # CONFIG_PASSWD_MODE_HIDE is not set
 CONFIG_PASSWD_MODE_STAR=y
 # CONFIG_PASSWD_MODE_CLEAR is not set
+CONFIG_CMD_SPLASH=y
+# CONFIG_CMD_FBTEST is not set
 CONFIG_CMD_READLINE=y
 CONFIG_CMD_TIMEOUT=y
 # end of Console and Framebuffer interaction
@@ -481,7 +483,19 @@ CONFIG_USB_MUSB=y
 CONFIG_USB_MUSB_DSPS=y
 CONFIG_USB_MUSB_AM335X=y
 CONFIG_USB_MUSB_HOST=y
-# CONFIG_VIDEO is not set
+CONFIG_VIDEO=y
+CONFIG_FRAMEBUFFER_CONSOLE=y
+CONFIG_VIDEO_VPL=y
+# CONFIG_DRIVER_VIDEO_BOCHS_ISA is not set
+# CONFIG_DRIVER_VIDEO_SIMPLEFB_CLIENT is not set
+# CONFIG_DRIVER_VIDEO_SIMPLEFB is not set
+# CONFIG_DRIVER_VIDEO_EDID is not set
+CONFIG_DRIVER_VIDEO_BACKLIGHT=y
+
+#
+# Video encoder chips
+#
+CONFIG_DRIVER_VIDEO_SIMPLE_PANEL=y
 # CONFIG_SOUND is not set
 CONFIG_MCI=y
 
@@ -706,8 +720,19 @@ CONFIG_XYMODEM=y
 #
 # Library gui routines
 #
+CONFIG_IMAGE_RENDERER=y
+# CONFIG_BMP is not set
+# CONFIG_PNG is not set
 # end of Library gui routines
 
+CONFIG_FONTS=y
+CONFIG_FONT_8x16=y
+# CONFIG_FONT_8x8 is not set
+# CONFIG_FONT_7x14 is not set
+# CONFIG_FONT_MINI_4x6 is not set
+# CONFIG_FONT_CUSTOM_16X is not set
+# CONFIG_FONT_6x8 is not set
+CONFIG_FONT_AUTOSELECT=y
 # CONFIG_BAREBOX_LOGO is not set
 # CONFIG_NLS is not set
 # CONFIG_BLOBGEN is not set
