Kernel is now working again Although, I need to do a clean rebuild to verify

--- a/configs/beaglebone_buildroot_defconfig
+++ b/configs/beaglebone_buildroot_defconfig
@@ -26,8 +26,9 @@ BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_HELIOS_PATH)/board/beaglebone/rootfs_overlay"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="support/scripts/genimage.sh"
 BR2_ROOTFS_POST_SCRIPT_ARGS="-c $(BR2_EXTERNAL_HELIOS_PATH)/board/beaglebone/genimage.cfg"
 BR2_LINUX_KERNEL=y
-BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
-BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="$(call github,beagleboard,linux,5.10.59-ti-r18)/linux-5.10.59-ti-r18.tar.gz"
+BR2_LINUX_KERNEL_CUSTOM_GIT=y
+BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/beagleboard/linux.git"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="5.10.65-ti-r23"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_HELIOS_PATH)/board/beaglebone/linux.config"
 BR2_LINUX_KERNEL_LZ4=y
@@ -39,7 +40,6 @@ BR2_PACKAGE_LINUX_TOOLS_CPUPOWER=y
 BR2_PACKAGE_LINUX_TOOLS_GPIO=y
 BR2_PACKAGE_BUSYBOX_CONFIG="$(BR2_EXTERNAL_HELIOS_PATH)/board/beaglebone/busybox.config"
 BR2_PACKAGE_BUSYBOX_WATCHDOG=y
-BR2_PACKAGE_BUSYBOX_WATCHDOG_PERIOD="9"
 BR2_PACKAGE_AM33X_CM3=y
 BR2_PACKAGE_AM335X_PRU_PACKAGE=y
 BR2_PACKAGE_STM32FLASH=y
