Tweaked kernel by customizing dts (removing hdmi and eeprom) Also got remoteproc working with am335x-pm-firmware.elf Hardcoded lpj calibration

--- a/board/beaglebone/genimage.cfg
+++ b/board/beaglebone/genimage.cfg
@@ -8,7 +8,7 @@ image boot.vfat {
 		}
 		files = {
 			"barebox.env",
-			"am335x-boneblack.dtb",
+			"am335x-boneblack-helios.dtb",
 			"zImage"
 		}
 	}
