Switched busybox to ash and enabled a few more tools We get farther in openrc prompt Also added rc.conf in rootfs_overlay/etc

--- a/configs/beaglebone_buildroot_defconfig
+++ b/configs/beaglebone_buildroot_defconfig
@@ -51,6 +51,7 @@ BR2_PACKAGE_BASH=y
 BR2_PACKAGE_BASH_COMPLETION=y
 BR2_PACKAGE_LOGROTATE=y
 BR2_PACKAGE_SUDO=y
+BR2_PACKAGE_HTOP=y
 BR2_PACKAGE_NANO=y
 # BR2_PACKAGE_NANO_TINY is not set
 BR2_PACKAGE_VIM=y
@@ -75,5 +76,3 @@ BR2_TARGET_BAREBOX_AUX_IMAGE_FILE="images/barebox-am33xx-beaglebone-mlo.img"
 BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_PACKAGE_HOST_GENIMAGE=y
 BR2_PACKAGE_HOST_MTOOLS=y
-BR2_PACKAGE_HOST_UBOOT_TOOLS=y
-BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
