Removed extraneous conf.d files Modified toolchain to harden security (PIE and RELO) and did a full rebuild

--- a/configs/beaglebone_buildroot_defconfig
+++ b/configs/beaglebone_buildroot_defconfig
@@ -6,8 +6,8 @@ BR2_JLEVEL=2
 BR2_CCACHE=y
 BR2_CCACHE_DIR="$(TOPDIR)/../.cache"
 BR2_OPTIMIZE_2=y
-BR2_SHARED_STATIC_LIBS=y
 BR2_PACKAGE_OVERRIDE_FILE="$(BR2_EXTERNAL_HELIOS_PATH)/board/beaglebone/local.mk"
+BR2_SSP_ALL=y
 BR2_TOOLCHAIN_BUILDROOT_MUSL=y
 BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_5_10=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
