Capitalized 'H' in Helios hostname Modified packages in busybox and buildroot to improve compatibility with open-rc Still can't find a way to get agetty to spawn after boot

--- a/board/beaglebone/linux.config
+++ b/board/beaglebone/linux.config
@@ -35,7 +35,7 @@ CONFIG_HAVE_KERNEL_LZ4=y
 # CONFIG_KERNEL_LZO is not set
 CONFIG_KERNEL_LZ4=y
 CONFIG_DEFAULT_INIT=""
-CONFIG_DEFAULT_HOSTNAME="heliOS"
+CONFIG_DEFAULT_HOSTNAME="HeliOS"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
