--- a/configs/beaglebone_buildroot_defconfig
+++ b/configs/beaglebone_buildroot_defconfig
@@ -52,6 +52,10 @@ BR2_PACKAGE_BASH_COMPLETION=y
 BR2_PACKAGE_LOGROTATE=y
 BR2_PACKAGE_SUDO=y
 BR2_PACKAGE_HTOP=y
+BR2_PACKAGE_START_STOP_DAEMON=y
+BR2_PACKAGE_UTIL_LINUX_BINARIES=y
+BR2_PACKAGE_UTIL_LINUX_AGETTY=y
+BR2_PACKAGE_UTIL_LINUX_MOUNT=y
 BR2_PACKAGE_NANO=y
 # BR2_PACKAGE_NANO_TINY is not set
 BR2_PACKAGE_VIM=y
