Reverted to default skeleton Login prompt now properly displays at boot Added ID to busybox binary Moved patches out of board/common and into global /patches directory Changed a few openrc settings Added post_build.sh for future rootfs deletions

--- a/configs/beaglebone_buildroot_defconfig
+++ b/configs/beaglebone_buildroot_defconfig
@@ -7,22 +7,28 @@ BR2_CCACHE=y
 BR2_CCACHE_DIR="$(TOPDIR)/../.cache"
 BR2_OPTIMIZE_2=y
 BR2_PACKAGE_OVERRIDE_FILE="$(BR2_EXTERNAL_HELIOS_PATH)/board/beaglebone/local.mk"
+BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_HELIOS_PATH)/patches"
 BR2_SSP_ALL=y
 BR2_TOOLCHAIN_BUILDROOT_MUSL=y
 BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_5_10=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_GCC_ENABLE_LTO=y
-BR2_ROOTFS_SKELETON_CUSTOM=y
-BR2_ROOTFS_SKELETON_CUSTOM_PATH="$(BR2_EXTERNAL_HELIOS_PATH)/board/common/skeleton"
+BR2_TARGET_GENERIC_HOSTNAME="HeliOS"
+BR2_TARGET_GENERIC_ISSUE="HeliOS - Telemetry Remastered"
 BR2_TARGET_GENERIC_PASSWD_SHA512=y
 BR2_INIT_OPENRC=y
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
 BR2_ROOTFS_DEVICE_TABLE="system/device_table.txt $(BR2_EXTERNAL_HELIOS_PATH)/board/common/device_table.txt"
 BR2_ROOTFS_MERGED_USR=y
+# BR2_TARGET_ENABLE_ROOT_LOGIN is not set
+BR2_TARGET_GENERIC_GETTY_BAUDRATE_115200=y
+BR2_TARGET_GENERIC_GETTY_TERM="linux"
+# BR2_TARGET_GENERIC_REMOUNT_ROOTFS_RW is not set
 BR2_SYSTEM_DEFAULT_PATH="/bin:/sbin:/usr/bin:/usr/sbin"
 BR2_TARGET_TZ_INFO=y
 BR2_ROOTFS_USERS_TABLES="$(BR2_EXTERNAL_HELIOS_PATH)/board/common/users_table.txt"
-BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_HELIOS_PATH)/board/beaglebone/rootfs_overlay"
+BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_HELIOS_PATH)/board/common/rootfs_overlay"
+BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_HELIOS_PATH)/board/common/post_build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="support/scripts/genimage.sh"
 BR2_ROOTFS_POST_SCRIPT_ARGS="-c $(BR2_EXTERNAL_HELIOS_PATH)/board/beaglebone/genimage.cfg"
 BR2_LINUX_KERNEL=y
@@ -40,10 +46,8 @@ BR2_PACKAGE_LINUX_TOOLS_CPUPOWER=y
 BR2_PACKAGE_LINUX_TOOLS_GPIO=y
 BR2_PACKAGE_BUSYBOX_CONFIG="$(BR2_EXTERNAL_HELIOS_PATH)/board/beaglebone/busybox.config"
 BR2_PACKAGE_BUSYBOX_WATCHDOG=y
-BR2_PACKAGE_AM33X_CM3=y
 BR2_PACKAGE_AM335X_PRU_PACKAGE=y
 BR2_PACKAGE_STM32FLASH=y
-BR2_PACKAGE_IFUPDOWN_SCRIPTS=y
 BR2_PACKAGE_OPENRESOLV=y
 BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_URANDOM_SCRIPTS=y
@@ -65,7 +69,6 @@ BR2_TARGET_ROOTFS_EXT2_SIZE="128M"
 BR2_TARGET_BAREBOX=y
 BR2_TARGET_BAREBOX_CUSTOM_VERSION=y
 BR2_TARGET_BAREBOX_CUSTOM_VERSION_VALUE="2021.08.0"
-BR2_TARGET_BAREBOX_CUSTOM_PATCH_DIR="$(BR2_EXTERNAL_HELIOS_PATH)/board/common/patches"
 BR2_TARGET_BAREBOX_USE_CUSTOM_CONFIG=y
 BR2_TARGET_BAREBOX_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_HELIOS_PATH)/board/beaglebone/barebox.config"
 BR2_TARGET_BAREBOX_IMAGE_FILE="images/barebox-am33xx-beaglebone.img"
