--- a/board/beaglebone/linux.config
+++ b/board/beaglebone/linux.config
@@ -650,7 +650,6 @@ CONFIG_ARCH_HAS_GCOV_PROFILE_ALL=y
 # end of GCOV-based kernel profiling
 
 CONFIG_HAVE_GCC_PLUGINS=y
-# CONFIG_GCC_PLUGINS is not set
 # end of General architecture-dependent options
 
 CONFIG_RT_MUTEXES=y
@@ -827,7 +826,6 @@ CONFIG_NET_IP_TUNNEL=y
 # CONFIG_NET_IPVTI is not set
 CONFIG_NET_UDP_TUNNEL=y
 # CONFIG_NET_FOU is not set
-# CONFIG_NET_FOU_IP_TUNNELS is not set
 CONFIG_INET_AH=y
 CONFIG_INET_ESP=y
 # CONFIG_INET_ESP_OFFLOAD is not set
@@ -858,10 +856,8 @@ CONFIG_IPV6_MIP6=y
 CONFIG_INET6_XFRM_TUNNEL=y
 CONFIG_INET6_TUNNEL=y
 # CONFIG_IPV6_VTI is not set
-CONFIG_IPV6_SIT=y
-# CONFIG_IPV6_SIT_6RD is not set
-CONFIG_IPV6_NDISC_NODETYPE=y
-CONFIG_IPV6_TUNNEL=y
+# CONFIG_IPV6_SIT is not set
+# CONFIG_IPV6_TUNNEL is not set
 CONFIG_IPV6_MULTIPLE_TABLES=y
 # CONFIG_IPV6_SUBTREES is not set
 # CONFIG_IPV6_MROUTE is not set
