--- a/configs/beaglebone_buildroot_defconfig
+++ b/configs/beaglebone_buildroot_defconfig
@@ -30,7 +30,7 @@ BR2_ROOTFS_USERS_TABLES="$(BR2_EXTERNAL_HELIOS_PATH)/board/common/users_table.tx
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_HELIOS_PATH)/board/common/rootfs_overlay"
 BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_HELIOS_PATH)/board/common/post_build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="support/scripts/genimage.sh"
-BR2_ROOTFS_POST_SCRIPT_ARGS="-c $(BR2_EXTERNAL_HELIOS_PATH)/board/beaglebone/genimage.cfg"
+BR2_ROOTFS_POST_SCRIPT_ARGS="${HELIOS_VERSION} -c $(BR2_EXTERNAL_HELIOS_PATH)/board/beaglebone/genimage.cfg"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/beagleboard/linux.git"
