--- a/board/beaglebone/busybox.config
+++ b/board/beaglebone/busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.33.1
-# Sat Oct 30 17:49:09 2021
+# Mon Nov 22 16:05:34 2021
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -1113,7 +1113,7 @@ CONFIG_ASH_ECHO=y
 CONFIG_ASH_PRINTF=y
 CONFIG_ASH_TEST=y
 CONFIG_ASH_HELP=y
-# CONFIG_ASH_GETOPTS is not set
+CONFIG_ASH_GETOPTS=y
 CONFIG_ASH_CMDCMD=y
 # CONFIG_CTTYHACK is not set
 # CONFIG_HUSH is not set
