Removed watchdog from busybox and added as package Removed barebox nv for wdt timeout (this is done in /etc/watchdog.conf now) Removed a few more packages from busybox

--- a/board/beaglebone/barebox.config
+++ b/board/beaglebone/barebox.config
@@ -211,7 +211,6 @@ CONFIG_POLLER=y
 # CONFIG_STATE is not set
 CONFIG_BOOTCHOOSER=y
 CONFIG_RESET_SOURCE=y
-# CONFIG_SYSTEMD_OF_WATCHDOG is not set
 
 #
 # OP-TEE loading
@@ -390,8 +389,6 @@ CONFIG_CMD_GPIO=y
 CONFIG_CMD_LED=y
 CONFIG_CMD_POWEROFF=y
 CONFIG_CMD_USB=y
-CONFIG_CMD_WD=y
-CONFIG_CMD_WD_DEFAULT_TIMOUT=0
 # end of Hardware manipulation
 
 #
@@ -561,11 +558,7 @@ CONFIG_LED_GPIO_OF=y
 # CONFIG_INPUT_SPECIALKEYS is not set
 # end of Input device support
 
-CONFIG_WATCHDOG=y
-# CONFIG_WATCHDOG_POLLER is not set
-# CONFIG_WATCHDOG_DW is not set
-CONFIG_WATCHDOG_OMAP=y
-# CONFIG_GPIO_WATCHDOG is not set
+# CONFIG_WATCHDOG is not set
 # CONFIG_PWM is not set
 # CONFIG_HWRNG is not set
 
