--- a/board/beaglebone/busybox.config
+++ b/board/beaglebone/busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.33.1
-# Mon Nov 22 16:05:34 2021
+# Sun Feb 27 22:51:06 2022
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -621,7 +621,7 @@ CONFIG_FEATURE_FBSET_READMODE=y
 # CONFIG_FEATURE_GETOPT_LONG is not set
 # CONFIG_HEXDUMP is not set
 # CONFIG_HD is not set
-CONFIG_XXD=y
+# CONFIG_XXD is not set
 CONFIG_HWCLOCK=y
 CONFIG_FEATURE_HWCLOCK_ADJTIME_FHS=y
 CONFIG_IONICE=y
@@ -763,7 +763,7 @@ CONFIG_CRONTAB=y
 # CONFIG_DEVFSD_VERBOSE is not set
 # CONFIG_FEATURE_DEVFS is not set
 # CONFIG_DEVMEM is not set
-CONFIG_FBSPLASH=y
+# CONFIG_FBSPLASH is not set
 # CONFIG_FLASH_ERASEALL is not set
 # CONFIG_FLASH_LOCK is not set
 # CONFIG_FLASH_UNLOCK is not set
@@ -775,7 +775,7 @@ CONFIG_FBSPLASH=y
 # CONFIG_FEATURE_HDPARM_HDIO_DRIVE_RESET is not set
 # CONFIG_FEATURE_HDPARM_HDIO_TRISTATE_HWIF is not set
 # CONFIG_FEATURE_HDPARM_HDIO_GETSET_DMA is not set
-CONFIG_HEXEDIT=y
+# CONFIG_HEXEDIT is not set
 # CONFIG_I2CGET is not set
 # CONFIG_I2CSET is not set
 # CONFIG_I2CDUMP is not set
@@ -805,7 +805,7 @@ CONFIG_LSSCSI=y
 # CONFIG_MT is not set
 # CONFIG_NANDWRITE is not set
 # CONFIG_NANDDUMP is not set
-CONFIG_PARTPROBE=y
+# CONFIG_PARTPROBE is not set
 # CONFIG_RAIDAUTORUN is not set
 # CONFIG_READAHEAD is not set
 CONFIG_RFKILL=y
@@ -867,12 +867,12 @@ CONFIG_DNSDOMAINNAME=y
 # CONFIG_FEATURE_HTTPD_LAST_MODIFIED is not set
 # CONFIG_FEATURE_HTTPD_DATE is not set
 # CONFIG_FEATURE_HTTPD_ACL_IP is not set
-CONFIG_IFCONFIG=y
-CONFIG_FEATURE_IFCONFIG_STATUS=y
+# CONFIG_IFCONFIG is not set
+# CONFIG_FEATURE_IFCONFIG_STATUS is not set
 # CONFIG_FEATURE_IFCONFIG_SLIP is not set
 # CONFIG_FEATURE_IFCONFIG_MEMSTART_IOADDR_IRQ is not set
-CONFIG_FEATURE_IFCONFIG_HW=y
-CONFIG_FEATURE_IFCONFIG_BROADCAST_PLUS=y
+# CONFIG_FEATURE_IFCONFIG_HW is not set
+# CONFIG_FEATURE_IFCONFIG_BROADCAST_PLUS is not set
 # CONFIG_IFENSLAVE is not set
 CONFIG_IFPLUGD=y
 CONFIG_IFUP=y
@@ -1044,14 +1044,14 @@ CONFIG_PSTREE=y
 # CONFIG_PWDX is not set
 # CONFIG_SMEMCAP is not set
 # CONFIG_BB_SYSCTL is not set
-CONFIG_TOP=y
-CONFIG_FEATURE_TOP_INTERACTIVE=y
-CONFIG_FEATURE_TOP_CPU_USAGE_PERCENTAGE=y
-CONFIG_FEATURE_TOP_CPU_GLOBAL_PERCENTS=y
-CONFIG_FEATURE_TOP_SMP_CPU=y
-CONFIG_FEATURE_TOP_DECIMALS=y
-CONFIG_FEATURE_TOP_SMP_PROCESS=y
-CONFIG_FEATURE_TOPMEM=y
+# CONFIG_TOP is not set
+# CONFIG_FEATURE_TOP_INTERACTIVE is not set
+# CONFIG_FEATURE_TOP_CPU_USAGE_PERCENTAGE is not set
+# CONFIG_FEATURE_TOP_CPU_GLOBAL_PERCENTS is not set
+# CONFIG_FEATURE_TOP_SMP_CPU is not set
+# CONFIG_FEATURE_TOP_DECIMALS is not set
+# CONFIG_FEATURE_TOP_SMP_PROCESS is not set
+# CONFIG_FEATURE_TOPMEM is not set
 CONFIG_UPTIME=y
 CONFIG_FEATURE_UPTIME_UTMP_SUPPORT=y
 CONFIG_WATCH=y
@@ -1061,7 +1061,7 @@ CONFIG_FEATURE_SHOW_THREADS=y
 # Runit Utilities
 #
 # CONFIG_CHPST is not set
-CONFIG_SETUIDGID=y
+# CONFIG_SETUIDGID is not set
 # CONFIG_ENVUIDGID is not set
 # CONFIG_ENVDIR is not set
 # CONFIG_SOFTLIMIT is not set
