--- a/board/beaglebone/dts/am335x-boneblack-helios.dts
+++ b/board/beaglebone/dts/am335x-boneblack-helios.dts
@@ -18,6 +18,30 @@
 	/delete-node/ cape_eeprom3;
 };
 
+/ {
+	leds {
+		led2 {
+			label = "usr0";
+			linux,default-trigger = "cpu0";
+		};
+
+		led3 {
+			label = "usr1";
+			linux,default-trigger = "panic";
+		};
+
+		led4 {
+			label = "usr2";
+			linux,default-trigger = "mmc0";
+		};
+
+		led5 {
+			label = "usr3";
+			linux,default-trigger = "mmc1";
+		};
+	};
+};
+
 #include "am335x-boneblack-common.dtsi"
 
 / {
