Upated linux, busybox, and buildroot configs with a few minor tweaks 1. Removed debugfs and perf monitoring from kernel 2. Removed su and ash from busybox 3. Updated buildroot config to reflect new kernel version and set default shell to /bin/bash

--- a/configs/beaglebone_buildroot_defconfig
+++ b/configs/beaglebone_buildroot_defconfig
@@ -13,6 +13,9 @@ BR2_TOOLCHAIN_BUILDROOT_MUSL=y
 BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_5_10=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_GCC_ENABLE_LTO=y
+BR2_PACKAGE_HOST_GDB=y
+BR2_PACKAGE_HOST_GDB_TUI=y
+BR2_GDB_VERSION_10=y
 BR2_TARGET_GENERIC_HOSTNAME="HeliOS"
 BR2_TARGET_GENERIC_ISSUE="HeliOS - Telemetry Remastered"
 BR2_TARGET_GENERIC_PASSWD_SHA512=y
@@ -21,6 +24,7 @@ BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
 BR2_ROOTFS_DEVICE_TABLE="system/device_table.txt $(BR2_EXTERNAL_HELIOS_PATH)/board/common/device_table.txt"
 BR2_ROOTFS_MERGED_USR=y
 # BR2_TARGET_ENABLE_ROOT_LOGIN is not set
+BR2_SYSTEM_BIN_SH_BASH=y
 BR2_TARGET_GENERIC_GETTY_BAUDRATE_115200=y
 BR2_TARGET_GENERIC_GETTY_TERM="linux"
 # BR2_TARGET_GENERIC_REMOUNT_ROOTFS_RW is not set
@@ -34,7 +38,7 @@ BR2_ROOTFS_POST_SCRIPT_ARGS="${HELIOS_VERSION} -c $(BR2_EXTERNAL_HELIOS_PATH)/bo
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/beagleboard/linux.git"
-BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="5.10.65-ti-r23"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="5.10.100-ti-r37"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_HELIOS_PATH)/board/beaglebone/linux.config"
 BR2_LINUX_KERNEL_LZ4=y
@@ -45,13 +49,11 @@ BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
 BR2_PACKAGE_LINUX_TOOLS_CPUPOWER=y
 BR2_PACKAGE_LINUX_TOOLS_GPIO=y
 BR2_PACKAGE_BUSYBOX_CONFIG="$(BR2_EXTERNAL_HELIOS_PATH)/board/beaglebone/busybox.config"
-BR2_PACKAGE_BUSYBOX_WATCHDOG=y
 BR2_PACKAGE_AM335X_PRU_PACKAGE=y
 BR2_PACKAGE_STM32FLASH=y
 BR2_PACKAGE_OPENRESOLV=y
 BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_URANDOM_SCRIPTS=y
-BR2_PACKAGE_BASH=y
 BR2_PACKAGE_BASH_COMPLETION=y
 BR2_PACKAGE_LOGROTATE=y
 BR2_PACKAGE_SUDO=y
@@ -60,6 +62,7 @@ BR2_PACKAGE_START_STOP_DAEMON=y
 BR2_PACKAGE_UTIL_LINUX_BINARIES=y
 BR2_PACKAGE_UTIL_LINUX_AGETTY=y
 BR2_PACKAGE_UTIL_LINUX_MOUNT=y
+BR2_PACKAGE_WATCHDOG=y
 BR2_PACKAGE_NANO=y
 # BR2_PACKAGE_NANO_TINY is not set
 BR2_PACKAGE_VIM=y
