--- a/board/beaglebone/busybox.config
+++ b/board/beaglebone/busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.33.1
-# Thu Mar  3 21:55:40 2022
+# Sun Mar  6 17:15:31 2022
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -534,9 +534,9 @@ CONFIG_FEATURE_NOLOGIN=y
 CONFIG_FEATURE_SECURETTY=y
 CONFIG_PASSWD=y
 CONFIG_FEATURE_PASSWD_WEAK_CHECK=y
-CONFIG_SU=y
-CONFIG_FEATURE_SU_SYSLOG=y
-CONFIG_FEATURE_SU_CHECKS_SHELLS=y
+# CONFIG_SU is not set
+# CONFIG_FEATURE_SU_SYSLOG is not set
+# CONFIG_FEATURE_SU_CHECKS_SHELLS is not set
 # CONFIG_FEATURE_SU_BLANK_PW_NEEDS_SECURE_TTY is not set
 CONFIG_SULOGIN=y
 # CONFIG_VLOCK is not set
@@ -662,7 +662,7 @@ CONFIG_MORE=y
 # CONFIG_FEATURE_MOUNT_FSTAB is not set
 # CONFIG_FEATURE_MOUNT_OTHERTAB is not set
 # CONFIG_MOUNTPOINT is not set
-CONFIG_NOLOGIN=y
+# CONFIG_NOLOGIN is not set
 # CONFIG_NOLOGIN_DEPENDENCIES is not set
 # CONFIG_NSENTER is not set
 # CONFIG_PIVOT_ROOT is not set
@@ -1090,31 +1090,31 @@ CONFIG_SV_DEFAULT_SERVICE_DIR=""
 #
 # Shells
 #
-CONFIG_SH_IS_ASH=y
+# CONFIG_SH_IS_ASH is not set
 # CONFIG_SH_IS_HUSH is not set
-# CONFIG_SH_IS_NONE is not set
+CONFIG_SH_IS_NONE=y
 # CONFIG_BASH_IS_ASH is not set
 # CONFIG_BASH_IS_HUSH is not set
 CONFIG_BASH_IS_NONE=y
-CONFIG_SHELL_ASH=y
-CONFIG_ASH=y
+# CONFIG_SHELL_ASH is not set
+# CONFIG_ASH is not set
 # CONFIG_ASH_OPTIMIZE_FOR_SIZE is not set
-CONFIG_ASH_INTERNAL_GLOB=y
-CONFIG_ASH_BASH_COMPAT=y
+# CONFIG_ASH_INTERNAL_GLOB is not set
+# CONFIG_ASH_BASH_COMPAT is not set
 # CONFIG_ASH_BASH_SOURCE_CURDIR is not set
-CONFIG_ASH_BASH_NOT_FOUND_HOOK=y
-CONFIG_ASH_JOB_CONTROL=y
-CONFIG_ASH_ALIAS=y
-CONFIG_ASH_RANDOM_SUPPORT=y
-CONFIG_ASH_EXPAND_PRMT=y
-CONFIG_ASH_IDLE_TIMEOUT=y
+# CONFIG_ASH_BASH_NOT_FOUND_HOOK is not set
+# CONFIG_ASH_JOB_CONTROL is not set
+# CONFIG_ASH_ALIAS is not set
+# CONFIG_ASH_RANDOM_SUPPORT is not set
+# CONFIG_ASH_EXPAND_PRMT is not set
+# CONFIG_ASH_IDLE_TIMEOUT is not set
 # CONFIG_ASH_MAIL is not set
-CONFIG_ASH_ECHO=y
-CONFIG_ASH_PRINTF=y
-CONFIG_ASH_TEST=y
-CONFIG_ASH_HELP=y
-CONFIG_ASH_GETOPTS=y
-CONFIG_ASH_CMDCMD=y
+# CONFIG_ASH_ECHO is not set
+# CONFIG_ASH_PRINTF is not set
+# CONFIG_ASH_TEST is not set
+# CONFIG_ASH_HELP is not set
+# CONFIG_ASH_GETOPTS is not set
+# CONFIG_ASH_CMDCMD is not set
 # CONFIG_CTTYHACK is not set
 # CONFIG_HUSH is not set
 # CONFIG_SHELL_HUSH is not set
@@ -1157,15 +1157,15 @@ CONFIG_ASH_CMDCMD=y
 #
 # Options common to all shells
 #
-CONFIG_FEATURE_SH_MATH=y
-CONFIG_FEATURE_SH_MATH_64=y
-CONFIG_FEATURE_SH_MATH_BASE=y
-CONFIG_FEATURE_SH_EXTRA_QUIET=y
+# CONFIG_FEATURE_SH_MATH is not set
+# CONFIG_FEATURE_SH_MATH_64 is not set
+# CONFIG_FEATURE_SH_MATH_BASE is not set
+# CONFIG_FEATURE_SH_EXTRA_QUIET is not set
 # CONFIG_FEATURE_SH_STANDALONE is not set
 # CONFIG_FEATURE_SH_NOFORK is not set
-CONFIG_FEATURE_SH_READ_FRAC=y
+# CONFIG_FEATURE_SH_READ_FRAC is not set
 # CONFIG_FEATURE_SH_HISTFILESIZE is not set
-CONFIG_FEATURE_SH_EMBEDDED_SCRIPTS=y
+# CONFIG_FEATURE_SH_EMBEDDED_SCRIPTS is not set
 
 #
 # System Logging Utilities
